Fix document.registerElement Chrome warning. (#29)
* Fix document.registerElement Chrome warning.

* Switch to spectrum-css.

* Load spectrum from CDN.

--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -5,24 +5,17 @@
   <meta charset="UTF-8">
   <title>Reactor Extension Library Sandbox</title>
 
-  <script>
-    window.Coral = window.Coral || {};
-    Coral.options = { typeKitId: 'buj6cmr' };
-  </script>
-
-  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/css/coral.css">
-  <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/libs/jquery.js"></script>
-  <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/coral.js"></script>
+  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/spectrum/2.9.0/spectrum-light.css">
 
   <link href="sandbox.css" rel="stylesheet" type="text/css">
   <script src="container.js"></script>
   <script src="engine.js"></script>
 </head>
 
-<body class="coral--light">
+<body class="spectrum spectrum--light">
   <div class="nav">
-    <a is="coral-anchorbutton" variant="quiet" href="editor.html">Go to rule editor</a>
-    <a is="coral-anchorbutton" variant="quiet" href="viewSandbox.html">Go to view sandbox</a>
+    <a class="spectrum-Button spectrum-Button--secondary spectrum-Button--quiet" href="editor.html">Go to rule editor</a>
+    <a class="spectrum-Button spectrum-Button--secondary spectrum-Button--quiet" href="viewSandbox.html">Go to view sandbox</a>
   </div>
 
   <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
