--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <title>Reactor Extension View Sandbox</title>
 
-    <script>
-      window.Coral = window.Coral || {};
-      Coral.options = { typeKitId: 'buj6cmr'};
-    </script>
-
-    <link rel="stylesheet" href="https://assets.adobedtm.com/activation/reactor/coralui/3.16.0/css/coral.css">
-    <script src="https://assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/libs/jquery.js"></script>
-    <script src="https://assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/coral.js"></script>
+    <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/spectrum/2.9.0/spectrum-light.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/codemirror.css" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/addon/lint/lint.css" rel="stylesheet" type="text/css">
@@ -27,13 +20,13 @@
     <link href="sandbox.css" rel="stylesheet" type="text/css">
     <link href="viewSandbox.css" rel="stylesheet" type="text/css">
  </head>
-  <body id="viewSandbox" class="coral--light">
+  <body id="viewSandbox" class="spectrum spectrum--light">
     <div id="content">
-      <a class="nav" is="coral-anchorbutton" variant="quiet" href="libSandbox.html">Go to library sandbox</a>
+      <a class="nav spectrum-Button spectrum-Button--secondary spectrum-Button--quiet" href="libSandbox.html">Go to library sandbox</a>
 
-      <h1 class="coral-Heading coral-Heading--1">Reactor Extension View Sandbox</h1>
+      <h1 class="spectrum-Body1">Reactor Extension View Sandbox</h1>
 
-      <div>
+      <div class="spectrum-Body5">
         Select View:
         <select id="viewGroupSelector"></select>
         <select id="extensionViewSelector"></select>
@@ -43,37 +36,51 @@
         <div id="panes">
           <div id="extensionViewPane"></div>
           <div id="controlPane">
-            <coral-tabview>
-              <coral-tablist>
-                <coral-tab>Init</coral-tab>
-                <coral-tab>Get Settings</coral-tab>
-                <coral-tab>Validate</coral-tab>
-              </coral-tablist>
-              <coral-panelstack>
-                <coral-panel>
-                  <div id="initEditorContainer" class="editorContainer"></div>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="initButton" class="panelButton">Init</button>
-                    <button is="coral-button" id="resetInitButton" class="panelButton resetInitButton">Reset</button>
+            <div class="spectrum-TabView">
+              <div class="spectrum-Tabs spectrum-Tabs--horizontal spectrum-Tabs--compact">
+                <div class="spectrum-Tabs-item is-selected">
+                  <label class="spectrum-Tabs-itemLabel" data-panel-id="initPanel" data-panel-style="width: 36px">Init</label>
+                </div>
+                <div class="spectrum-Tabs-item">
+                  <label class="spectrum-Tabs-itemLabel" data-panel-id="getSettingsPanel" data-panel-style="width: 86px; left: 49px">Get Settings</label>
+                </div>
+                <div class="spectrum-Tabs-item">
+                  <label class="spectrum-Tabs-itemLabel" data-panel-id="validatePanel" data-panel-style="width: 60px; left: 152px">Validate</label>
+                </div>
+                <div id="tabsIndicator" class="spectrum-Tabs-selectionIndicator" style="width: 36px; left: 0px;"></div>
+              </div>
+
+              <div class="spectrum-PanelStack">
+                <div class="spectrum-Panel is-selected" id="initPanel">
+                  <div class="spectrum-PanelContent">
+                    <div id="initEditorContainer" class="editorContainer"></div>
+                    <div class="panelButtonHolder">
+                      <button id="initButton" class="spectrum-Button spectrum-Button--primary panelButton">Init</button>
+                      <button id="resetInitButton" class="spectrum-Button spectrum-Button--primary panelButton resetInitButton">Reset</button>
+                    </div>
                   </div>
-                </coral-panel>
-                <coral-panel>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="getSettingsButton" class="panelButton">Get Settings</button>
+                </div>
+                <div class="spectrum-Panel" id="getSettingsPanel">
+                  <div class="spectrum-PanelContent">
+                    <div class="panelButtonHolder">
+                      <button id="getSettingsButton" class="spectrum-Button spectrum-Button--primary panelButton">Get Settings</button>
+                    </div>
+                    <div id="getSettingsEditorContainer" class="editorContainer"></div>
+                    <div class="panelButtonHolder">
+                      <button id="copySettingsToInitButton" class="spectrum-Button spectrum-Button--primary panelButton">Copy Settings to Init Panel</button>
+                    </div>
                   </div>
-                  <div id="getSettingsEditorContainer" class="editorContainer"></div>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="copySettingsToInitButton" class="panelButton">Copy Settings to Init Panel</button>
+                </div>
+                <div class="spectrum-Panel" id="validatePanel">
+                  <div class="spectrum-PanelContent">
+                    <div class="panelButtonHolder">
+                      <button id="validateButton" class="spectrum-Button spectrum-Button--primary panelButton">Validate</button>
+                    </div>
+                    <div id="validateOutput"></div>
                   </div>
-                </coral-panel>
-                <coral-panel>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="validateButton" class="panelButton">Validate</button>
-                  </div>
-                  <div id="validateOutput"></div>
-                </coral-panel>
-              </coral-panelstack>
-            </coral-tabview>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
