Added a built-in variable data element type.

--- a/src/client/public/javascriptVariable.html
+++ b/src/client/public/javascriptVariable.html
@@ -16,8 +16,8 @@
 <div id="root"></div>
 <script>
   Form.create({
-    name: {
-      title: 'Key name',
+    path: {
+      title: 'JavaScript variable name',
       required: true
     }
   }, document.getElementById('root'));
