--- a/src/client/public/libSandbox.html
+++ b/src/client/public/libSandbox.html
@@ -3,22 +3,11 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Reactor Extension Library Sandbox</title>
-
-  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/spectrum/2.9.0/spectrum-light.css">
-
-  <link href="sandbox.css" rel="stylesheet" type="text/css">
-  <script src="container.js"></script>
-  <script src="engine.js"></script>
+  <script src="launch-EN00000000000000000000000000000000.js" async></script>
 </head>
 
-<body class="spectrum spectrum--light">
-  <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
-
-  Modify .sandbox/container.js and .sandbox/libSandbox.html then test the result here. Check out
-  <a href="https://www.npmjs.com/package/@adobe/reactor-sandbox#configuring-the-sandbox" target="_blank">documentation</a> on how to generate the `.sandbox` files.
-
-  <script>_satellite.pageBottom();</script>
+<body>
+  This is rendered the iframe
 </body>
 
 </html>
