--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     <script>
       const protocol = window.location.protocol;
       const hostname = window.location.hostname;
-      const port = window.location.port || 80;
+      const port = window.location.port;
       const appPort = port === '3001' ? 3000 : port;
 
-      window.EXPRESS_PUBLIC_URL = `${protocol}//${hostname}:${appPort}`;
+      window.EXPRESS_PUBLIC_URL = `${protocol}//${hostname}${appPort ? ':' + appPort : ''}`;
     </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
